# MemoryManager

./: CMakeLists.txt  ReadMe.md  main.cpp
HeapManagerLib/: CMakeLists.txt  HeapManager.cpp  HeapManager.h
